syntax = "proto3";
package bluzelle.curium.crud;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bluzelle/curium/x/crud/types";

// Msg defines the Msg service.
service Msg {
    // this line is used by starport scaffolding # proto/tx/rpc
  rpc UpsertCrudValue(MsgUpsertCrudValue) returns (MsgUpsertCrudValueResponse);
  rpc CreateCrudValue(MsgCreateCrudValue) returns (MsgCreateCrudValueResponse);
  rpc UpdateCrudValue(MsgUpdateCrudValue) returns (MsgUpdateCrudValueResponse);
  rpc DeleteCrudValue(MsgDeleteCrudValue) returns (MsgDeleteCrudValueResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgUpsertCrudValue {
  string creator = 1;
  string uuid = 2;
  string key = 3;
  string value = 4;
  int64 lease = 5;
}

message MsgUpsertCrudValueResponse {
}

message MsgCreateCrudValue {
  string creator = 1;
  string uuid = 2;
  string key = 3;
  string value = 4;
  int64 lease = 5;
}

message MsgCreateCrudValueResponse {
}

message MsgUpdateCrudValue {
  string creator = 1;
  string uuid = 2;
  string key = 3;
  string value = 4;
  int64 lease = 5;
}

message MsgUpdateCrudValueResponse { }

message MsgDeleteCrudValue {
  string creator = 1;
  string uuid = 2;
  string key = 3;
}

message MsgDeleteCrudValueResponse { }
